# mysql-data-diff

./: LICENSE  pyproject.toml
mysql_data_diff/: __main__.py
